src/generated_bindings/volt.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of nvm_mmgr_geometry"][::core::mem::size_of::<nvm_mmgr_geometry>() - 144usize];
    ["Alignment of nvm_mmgr_geometry"][::core::mem::align_of::<nvm_mmgr_geometry>() - 8usize];
    ["Offset of field: nvm_mmgr_geometry::n_of_ch"]
        [::core::mem::offset_of!(nvm_mmgr_geometry, n_of_ch) - 0usize];
    ["Offset of field: nvm_mmgr_geometry::lun_per_ch"]
        [::core::mem::offset_of!(nvm_mmgr_geometry, lun_per_ch) - 1usize];
    ["Offset of field: nvm_mmgr_geometry::blk_per_lun"]
        [::core::mem::offset_of!(nvm_mmgr_geometry, blk_per_lun) - 2usize];
    ["Offset of field: nvm_mmgr_geometry::pg_per_blk"]
        [::core::mem::offset_of!(nvm_mmgr_geometry, pg_per_blk) - 4usize];
    ["Offset of field: nvm_mmgr_geometry::sec_per_pg"]
        [::core::mem::offset_of!(nvm_mmgr_geometry, sec_per_pg) - 6usize];
    ["Offset of field: nvm_mmgr_geometry::n_of_planes"]
        [::core::mem::offset_of!(nvm_mmgr_geometry, n_of_planes) - 8usize];
    ["Offset of field: nvm_mmgr_geometry::pg_size"]
        [::core::mem::offset_of!(nvm_mmgr_geometry, pg_size) - 12usize];
    ["Offset of field: nvm_mmgr_geometry::sec_oob_sz"]
        [::core::mem::offset_of!(nvm_mmgr_geometry, sec_oob_sz) - 16usize];
    ["Offset of field: nvm_mmgr_geometry::sec_per_pl_pg"]
        [::core::mem::offset_of!(nvm_mmgr_geometry, sec_per_pl_pg) - 20usize];
    ["Offset of field: nvm_mmgr_geometry::sec_per_blk"]
        [::core::mem::offset_of!(nvm_mmgr_geometry, sec_per_blk) - 24usize];
    ["Offset of field: nvm_mmgr_geometry::sec_per_lun"]
        [::core::mem::offset_of!(nvm_mmgr_geometry, sec_per_lun) - 28usize];
    ["Offset of field: nvm_mmgr_geometry::sec_per_ch"]
        [::core::mem::offset_of!(nvm_mmgr_geometry, sec_per_ch) - 32usize];
    ["Offset of field: nvm_mmgr_geometry::pg_per_lun"]
        [::core::mem::offset_of!(nvm_mmgr_geometry, pg_per_lun) - 36usize];
    ["Offset of field: nvm_mmgr_geometry::pg_per_ch"]
        [::core::mem::offset_of!(nvm_mmgr_geometry, pg_per_ch) - 40usize];
    ["Offset of field: nvm_mmgr_geometry::blk_per_ch"]
        [::core::mem::offset_of!(nvm_mmgr_geometry, blk_per_ch) - 44usize];
    ["Offset of field: nvm_mmgr_geometry::tot_sec"]
        [::core::mem::offset_of!(nvm_mmgr_geometry, tot_sec) - 48usize];
    ["Offset of field: nvm_mmgr_geometry::tot_pg"]
        [::core::mem::offset_of!(nvm_mmgr_geometry, tot_pg) - 56usize];
    ["Offset of field: nvm_mmgr_geometry::tot_blk"]
        [::core::mem::offset_of!(nvm_mmgr_geometry, tot_blk) - 64usize];
    ["Offset of field: nvm_mmgr_geometry::tot_lun"]
        [::core::mem::offset_of!(nvm_mmgr_geometry, tot_lun) - 68usize];
    ["Offset of field: nvm_mmgr_geometry::sec_size"]
        [::core::mem::offset_of!(nvm_mmgr_geometry, sec_size) - 72usize];
    ["Offset of field: nvm_mmgr_geometry::pl_pg_size"]
        [::core::mem::offset_of!(nvm_mmgr_geometry, pl_pg_size) - 76usize];
    ["Offset of field: nvm_mmgr_geometry::blk_size"]
        [::core::mem::offset_of!(nvm_mmgr_geometry, blk_size) - 80usize];
    ["Offset of field: nvm_mmgr_geometry::lun_size"]
        [::core::mem::offset_of!(nvm_mmgr_geometry, lun_size) - 88usize];
    ["Offset of field: nvm_mmgr_geometry::ch_size"]
        [::core::mem::offset_of!(nvm_mmgr_geometry, ch_size) - 96usize];
    ["Offset of field: nvm_mmgr_geometry::tot_size"]
        [::core::mem::offset_of!(nvm_mmgr_geometry, tot_size) - 104usize];
    ["Offset of field: nvm_mmgr_geometry::pg_oob_sz"]
        [::core::mem::offset_of!(nvm_mmgr_geometry, pg_oob_sz) - 112usize];
    ["Offset of field: nvm_mmgr_geometry::pl_pg_oob_sz"]
        [::core::mem::offset_of!(nvm_mmgr_geometry, pl_pg_oob_sz) - 116usize];
    ["Offset of field: nvm_mmgr_geometry::blk_oob_sz"]
        [::core::mem::offset_of!(nvm_mmgr_geometry, blk_oob_sz) - 120usize];
    ["Offset of field: nvm_mmgr_geometry::lun_oob_sz"]
        [::core::mem::offset_of!(nvm_mmgr_geometry, lun_oob_sz) - 124usize];
    ["Offset of field: nvm_mmgr_geometry::ch_oob_sz"]
        [::core::mem::offset_of!(nvm_mmgr_geometry, ch_oob_sz) - 128usize];
    ["Offset of field: nvm_mmgr_geometry::tot_oob_sz"]
        [::core::mem::offset_of!(nvm_mmgr_geometry, tot_oob_sz) - 136usize];
};
pub const mmgr_flags_MMGR_FLAG_PL_CMD: mmgr_flags = 1;
pub const mmgr_flags_MMGR_FLAG_MIN_CP_TIME: mmgr_flags = 4;
pub type mmgr_flags = ::core::ffi::c_uint;
#[repr(C, packed)]
#[derive(Debug, Copy, Clone)]
pub struct nvm_magic {
    pub rsvd: u32,
    pub magic: u32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of nvm_magic"][::core::mem::size_of::<nvm_magic>() - 8usize];
    ["Alignment of nvm_magic"][::core::mem::align_of::<nvm_magic>() - 1usize];
    ["Offset of field: nvm_magic::rsvd"][::core::mem::offset_of!(nvm_magic, rsvd) - 0usize];
    ["Offset of field: nvm_magic::magic"][::core::mem::offset_of!(nvm_magic, magic) - 4usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct nvm_io_data {
    pub ch: *mut nvm_channel,
    pub n_pl: u8,
    pub pg_sz: u32,
    pub buf: *mut u8,
    pub pl_vec: *mut *mut u8,
    pub oob_vec: *mut *mut u8,
    pub sec_vec: *mut *mut *mut u8,
    pub meta_sz: u32,
    pub buf_sz: u32,
    pub mod_oob: *mut u8,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of nvm_io_data"][::core::mem::size_of::<nvm_io_data>() - 64usize];
    ["Alignment of nvm_io_data"][::core::mem::align_of::<nvm_io_data>() - 8usize];
    ["Offset of field: nvm_io_data::ch"][::core::mem::offset_of!(nvm_io_data, ch) - 0usize];
    ["Offset of field: nvm_io_data::n_pl"][::core::mem::offset_of!(nvm_io_data, n_pl) - 8usize];
    ["Offset of field: nvm_io_data::pg_sz"][::core::mem::offset_of!(nvm_io_data, pg_sz) - 12usize];
    ["Offset of field: nvm_io_data::buf"][::core::mem::offset_of!(nvm_io_data, buf) - 16usize];
    ["Offset of field: nvm_io_data::pl_vec"]
        [::core::mem::offset_of!(nvm_io_data, pl_vec) - 24usize];
    ["Offset of field: nvm_io_data::oob_vec"]
        [::core::mem::offset_of!(nvm_io_data, oob_vec) - 32usize];
    ["Offset of field: nvm_io_data::sec_vec"]
        [::core::mem::offset_of!(nvm_io_data, sec_vec) - 40usize];
    ["Offset of field: nvm_io_data::meta_sz"]
        [::core::mem::offset_of!(nvm_io_data, meta_sz) - 48usize];
    ["Offset of field: nvm_io_data::buf_sz"]
        [::core::mem::offset_of!(nvm_io_data, buf_sz) - 52usize];
    ["Offset of field: nvm_io_data::mod_oob"]
        [::core::mem::offset_of!(nvm_io_data, mod_oob) - 56usize];
};
pub type nvm_mmgr_read_pg =
    ::core::option::Option<unsafe extern "C" fn(arg1: *mut nvm_mmgr_io_cmd) -> ::core::ffi::c_int>;
pub type nvm_mmgr_write_pg =
    ::core::option::Option<unsafe extern "C" fn(arg1: *mut nvm_mmgr_io_cmd) -> ::core::ffi::c_int>;
pub type nvm_mmgr_erase_blk =
    ::core::option::Option<unsafe extern "C" fn(arg1: *mut nvm_mmgr_io_cmd) -> ::core::ffi::c_int>;
pub type nvm_mmgr_get_ch_info = ::core::option::Option<
    unsafe extern "C" fn(arg1: *mut nvm_channel, arg2: u16) -> ::core::ffi::c_int,
>;
pub type nvm_mmgr_set_ch_info = ::core::option::Option<
    unsafe extern "C" fn(arg1: *mut nvm_channel, arg2: u16) -> ::core::ffi::c_int,
>;
pub type nvm_mmgr_exit = ::core::option::Option<unsafe extern "C" fn(arg1: *mut nvm_mmgr)>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct nvm_mmgr_ops {
    pub read_pg: nvm_mmgr_read_pg,
    pub write_pg: nvm_mmgr_write_pg,
    pub erase_blk: nvm_mmgr_erase_blk,
    pub exit: nvm_mmgr_exit,
    pub get_ch_info: nvm_mmgr_get_ch_info,
    pub set_ch_info: nvm_mmgr_set_ch_info,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of nvm_mmgr_ops"][::core::mem::size_of::<nvm_mmgr_ops>() - 48usize];
    ["Alignment of nvm_mmgr_ops"][::core::mem::align_of::<nvm_mmgr_ops>() - 8usize];
    ["Offset of field: nvm_mmgr_ops::read_pg"]
        [::core::mem::offset_of!(nvm_mmgr_ops, read_pg) - 0usize];
    ["Offset of field: nvm_mmgr_ops::write_pg"]
        [::core::mem::offset_of!(nvm_mmgr_ops, write_pg) - 8usize];
    ["Offset of field: nvm_mmgr_ops::erase_blk"]
        [::core::mem::offset_of!(nvm_mmgr_ops, erase_blk) - 16usize];
    ["Offset of field: nvm_mmgr_ops::exit"][::core::mem::offset_of!(nvm_mmgr_ops, exit) - 24usize];
    ["Offset of field: nvm_mmgr_ops::get_ch_info"]
        [::core::mem::offset_of!(nvm_mmgr_ops, get_ch_info) - 32usize];
    ["Offset of field: nvm_mmgr_ops::set_ch_info"]
        [::core::mem::offset_of!(nvm_mmgr_ops, set_ch_info) - 40usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct nvm_mmgr {
    pub name: *const ::core::ffi::c_char,
    pub ops: *mut nvm_mmgr_ops,
    pub geometry: *mut nvm_mmgr_geometry,
    pub ch_info: *mut nvm_channel,
    pub flags: u8,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of nvm_mmgr"][::core::mem::size_of::<nvm_mmgr>() - 40usize];
    ["Alignment of nvm_mmgr"][::core::mem::align_of::<nvm_mmgr>() - 8usize];
    ["Offset of field: nvm_mmgr::name"][::core::mem::offset_of!(nvm_mmgr, name) - 0usize];
    ["Offset of field: nvm_mmgr::ops"][::core::mem::offset_of!(nvm_mmgr, ops) - 8usize];
    ["Offset of field: nvm_mmgr::geometry"][::core::mem::offset_of!(nvm_mmgr, geometry) - 16usize];
    ["Offset of field: nvm_mmgr::ch_info"][::core::mem::offset_of!(nvm_mmgr, ch_info) - 24usize];
    ["Offset of field: nvm_mmgr::flags"][::core::mem::offset_of!(nvm_mmgr, flags) - 32usize];
};
#[repr(C)]
#[derive(Copy, Clone)]
pub struct nvm_channel {
    pub ch_id: u16,
    pub ch_mmgr_id: u16,
    pub ns_pgs: u64,
    pub slba: u64,
    pub elba: u64,
    pub tot_bytes: u64,
    pub mmgr_rsv: u16,
    pub ftl_rsv: u16,
    pub mmgr: *mut nvm_mmgr,
    pub ftl: *mut nvm_ftl,
    pub geometry: *mut nvm_mmgr_geometry,
    pub mmgr_rsv_list: [nvm_ppa_addr; 16usize],
    pub ftl_rsv_list: [nvm_ppa_addr; 16usize],
    pub __bindgen_anon_1: nvm_channel__bindgen_ty_1,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union nvm_channel__bindgen_ty_1 {
    pub i: nvm_channel__bindgen_ty_1__bindgen_ty_1,
    pub nvm_info: u64,
}
#[repr(C)]
#[repr(align(8))]
#[derive(Debug, Copy, Clone)]
pub struct nvm_channel__bindgen_ty_1__bindgen_ty_1 {
    pub _bitfield_align_1: [u32; 0],
    pub _bitfield_1: __BindgenBitfieldUnit<[u8; 8usize]>,
}
